# grandmofty-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/grandmofty/: __init__.py  server.py  tool.py
src/grandmofty/db/: query.py  schema.py  sync.py
tests/: conftest.py  test_query.py  test_tool.py
